--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "recharts": "^2.9.0"
+    "recharts": "^2.9.0",
+    "use-debounce": "^9.0.4"
   },
   "devDependencies": {
     "@types/node": "^20",
