--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "bcrypt": "^5.1.1",
     "mongoose": "^8.2.3",
     "next": "14.1.3",
     "react": "^18",
