--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,9 @@
     "bcrypt": "^5.1.1",
     "mongoose": "^8.2.3",
     "next": "14.1.3",
+    "next-auth": "^5.0.0-beta.3",
     "react": "^18",
-    "react-dom": "^18",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "recharts": "^2.9.0",
     "use-debounce": "^9.0.4"
