"Update sidebar, add user image, and refactor auth"
This commit includes the following changes:

1. Update the sidebar component to display the user's image and name.
2. Add a new property `img` to the UserModel interface and the getUser function.
3. Refactor the auth configuration to include custom user properties in the JWT and session.
4. Add the sidebar.tsx file to the include list in the tsconfig.json file.

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/authconfig.js", "app/ui/login/loginForm/loginForm.jsx", "app/login/page.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/authconfig.js", "app/ui/login/loginForm/loginForm.jsx", "app/login/page.jsx", "app/ui/dashboard/sidebar/sidebar.tsx"],
   "exclude": ["node_modules"]
 }
