--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "formidable": "^3.5.1",
     "mongoose": "^8.2.3",
     "next": "^14.2.0-canary.43",
     "next-auth": "^5.0.0-beta.15",
@@ -22,6 +24,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
